fix css on smaller screens

--- a/material-overrides/assets/stylesheets/polkadot.css
+++ b/material-overrides/assets/stylesheets/polkadot.css
@@ -837,6 +837,18 @@ html .md-footer-meta.md-typeset a:hover {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .footer-nav {
+    gap: 4px;
+    margin-top: var(--py-1);
+    margin-bottom: var(--py-1);
+    flex-wrap: wrap;
+  }
+
+  .md-typeset a.footer-nav-link {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 /* --- Admonitions --- */
@@ -1073,7 +1085,7 @@ span.badge {
   flex-direction: column;
   padding-top: var(--p-3);
   margin: 0;
-  gap: var(--p-1)
+  gap: var(--p-1);
 }
 
 .status-badge a > img {
